[tool.poetry]
name = "probabilistic-robotics"
version = "0.1.0"
description = ""
authors = ["Shoma Shimizu <mzsrkeen10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^4.1.4"
pandas = "^2.2.1"
jupyter = "^1.0.0"
matplotlib = "^3.8.3"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
