[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^4.1.4"
pandas = "^2.2.1"
jupyter = "^1.0.0"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
seaborn = "^0.13.2"
ipympl = "^0.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
